Fix display on mobile devices

--- a/app/components/multiple-choice-matrix/multiple_choice_matrix.css
+++ b/app/components/multiple-choice-matrix/multiple_choice_matrix.css
@@ -14,3 +14,19 @@
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
+@media (max-width: 576px) {
+	.multiple-choice-matrix-question-header {
+		display: none;
+	}
+}
+
+.multiple-choice-matrix-answer-text {
+	display: none;
+}
+
+@media (max-width: 576px) {
+	.multiple-choice-matrix-answer-text {
+		display: inherit;
+	}
+}
